--- a/static/chat-widget.html
+++ b/static/chat-widget.html
@@ -31,27 +31,68 @@
       height: 32px;
       border-radius: 50%;
     }
+    #header span {
+      color: #fff;
+      font-weight: bold;
+      font-size: 1.1rem;
+    }
     #messages {
       flex: 1;
-      padding: 10px;
+      padding: 16px 10px 10px 10px;
       overflow-y: auto;
+      background: var(--color-bg, #f5f5f5);
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+    .msg-row {
+      display: flex;
+      align-items: flex-end;
+      gap: 8px;
+      animation: fadeIn 0.4s;
+    }
+    .msg-row.bot {
+      flex-direction: row;
+      justify-content: flex-start;
+    }
+    .msg-row.user {
+      flex-direction: row-reverse;
+      justify-content: flex-end;
+    }
+    .msg-avatar {
+      width: 28px;
+      height: 28px;
+      border-radius: 50%;
+      background: #fff;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.08);
+      object-fit: cover;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.1rem;
+      color: #888;
     }
     .msg {
-      margin-bottom: 8px;
-      padding: 8px 12px;
-      border-radius: 16px;
-      max-width: 80%;
+      padding: 10px 16px;
+      border-radius: 18px;
+      max-width: 75%;
+      font-size: 1rem;
+      line-height: 1.5;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.07);
       word-break: break-word;
+      margin-bottom: 0;
+      margin-top: 0;
+      transition: background 0.2s;
     }
     .msg.bot {
-      background: var(--color-main, #0084ff);
+      background: linear-gradient(135deg, var(--color-main, #0084ff) 80%, #4fc3f7 100%);
       color: #fff;
-      align-self: flex-start;
+      border-bottom-left-radius: 6px;
     }
     .msg.user {
-      background: #e0e0e0;
+      background: linear-gradient(135deg, #e0e0e0 80%, #f5f5f5 100%);
       color: #222;
-      align-self: flex-end;
+      border-bottom-right-radius: 6px;
     }
     #input-area {
       display: flex;
@@ -65,6 +106,7 @@
       padding: 8px;
       border-radius: 16px;
       outline: none;
+      font-size: 1rem;
     }
     #input-area button {
       background: var(--color-main, #0084ff);
@@ -74,20 +116,31 @@
       padding: 8px 16px;
       margin-left: 8px;
       cursor: pointer;
+      font-size: 1rem;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
-<body>
-  <div id="chat-container">
-    <div id="header">
-      <img id="logo" src="" alt="Bot" />
-      <span id="bot-name">ChatBot</span>
+<body style="margin:0; padding:0; background:transparent; width:100vw; height:100vh;">
+  <div id="chat-container" style="display: none; flex-direction: column; height: 100%;">
+    <div id="header" style="display: flex; align-items: center; justify-content: space-between; background: var(--color-main, #0084ff); padding: 12px;">
+      <div style="display: flex; align-items: center; gap: 10px;">
+        <img id="logo" src="" alt="Bot" style="width: 32px; height: 32px; border-radius: 50%; margin-right: 8px; background: #fff;" />
+        <span id="bot-name" style="color: #fff; font-weight: bold; font-size: 1.1rem;">ChatBot</span>
+      </div>
+      <button id="minimize-btn" title="Minimizar chat" style="background: rgba(255,255,255,0.15); border: none; color: #fff; font-size: 20px; cursor: pointer; border-radius: 6px; width: 32px; height: 32px; display: flex; align-items: center; justify-content: center;">&#8211;</button>
     </div>
-    <div id="messages"></div>
-    <form id="input-area">
-      <input type="text" id="user-input" placeholder="Escribe tu mensaje..." autocomplete="off" />
-      <button type="submit">Enviar</button>
+    <div id="messages" style="flex: 1; overflow-y: auto; padding: 10px;"></div>
+    <form id="input-area" style="display: flex; border-top: 1px solid #ddd; padding: 8px; background: #fff;">
+      <input type="text" id="user-input" placeholder="Escribe tu mensaje..." autocomplete="off" style="flex: 1; border: none; padding: 8px; border-radius: 16px; outline: none;" />
+      <button type="submit" style="background: var(--color-main, #0084ff); color: #fff; border: none; border-radius: 16px; padding: 8px 16px; margin-left: 8px; cursor: pointer;">Enviar</button>
     </form>
+  </div>
+  <div id="chat-bubble" title="Abrir chat" style="display: none; position: fixed; bottom: 32px; right: 32px; z-index: 9999; width: 64px; height: 64px; border-radius: 50%; box-shadow: 0 2px 8px rgba(0,0,0,0.15); background: var(--color-main, #0084ff); align-items: center; justify-content: center; cursor: pointer; transition: box-shadow 0.2s, transform 0.2s;">
+    <img id="bubble-logo" src="" alt="Bot" style="width: 36px; height: 36px; border-radius: 50%; background: #fff; padding: 4px; box-shadow: 0 1px 4px rgba(0,0,0,0.10); object-fit: cover;" />
   </div>
   <script>
     // Leer parámetros de la URL
@@ -99,19 +152,64 @@
     const logo = params.get('logo') || 'https://cdn-icons-png.flaticon.com/512/4712/4712035.png';
     const botName = params.get('nombre') || 'ChatBot';
 
+    // Función para expandir color hex abreviado a formato largo
+    function expandHex(hex) {
+      if (hex.length === 4) {
+        return '#' + hex[1] + hex[1] + hex[2] + hex[2] + hex[3] + hex[3];
+      }
+      return hex;
+    }
+    // Función para aclarar un color hex
+    function lighten(hex, percent) {
+      hex = expandHex(hex);
+      let r = parseInt(hex.slice(1,3),16), g = parseInt(hex.slice(3,5),16), b = parseInt(hex.slice(5,7),16);
+      r = Math.min(255, Math.floor(r + (255 - r) * percent));
+      g = Math.min(255, Math.floor(g + (255 - g) * percent));
+      b = Math.min(255, Math.floor(b + (255 - b) * percent));
+      return `rgb(${r},${g},${b})`;
+    }
+    const colorMain = expandHex(color);
+    const colorMainLight = lighten(colorMain, 0.5);
+
     // Aplicar estilos personalizados
-    document.documentElement.style.setProperty('--color-main', color);
+    document.documentElement.style.setProperty('--color-main', colorMain);
     document.documentElement.style.setProperty('--color-bg', bg);
     document.getElementById('logo').src = logo;
     document.getElementById('bot-name').textContent = botName;
+    document.getElementById('bubble-logo').src = logo;
+    // Header dinámico
+    document.getElementById('header').style.background = colorMain;
+
+    // Actualizar el degradado de las burbujas del bot dinámicamente
+    const prevStyle = document.getElementById('bot-gradient-style');
+    if (prevStyle) prevStyle.remove();
+    const style = document.createElement('style');
+    style.id = 'bot-gradient-style';
+    style.innerHTML = `.msg.bot { background: linear-gradient(135deg, ${colorMain} 80%, ${colorMainLight} 100%) !important; }`;
+    document.head.appendChild(style);
 
     // Mostrar mensaje de bienvenida
     const messages = document.getElementById('messages');
     function addMessage(text, sender) {
+      const row = document.createElement('div');
+      row.className = 'msg-row ' + sender;
+      // Avatar
+      const avatar = document.createElement('img');
+      avatar.className = 'msg-avatar';
+      if (sender === 'bot') {
+        avatar.src = logo;
+        avatar.alt = 'Bot';
+      } else {
+        avatar.src = 'https://ui-avatars.com/api/?name=U&background=e0e0e0&color=222&size=64';
+        avatar.alt = 'Tú';
+      }
+      // Burbuja
       const div = document.createElement('div');
       div.className = 'msg ' + sender;
       div.textContent = text;
-      messages.appendChild(div);
+      row.appendChild(avatar);
+      row.appendChild(div);
+      messages.appendChild(row);
       messages.scrollTop = messages.scrollHeight;
     }
     addMessage(mensaje, 'bot');
@@ -147,6 +245,83 @@
         addMessage(data, 'bot');
       } catch {
         addMessage('Error de conexión', 'bot');
+      }
+    });
+
+    // Funcionalidad de minimizar y burbuja
+    const chatContainer = document.getElementById('chat-container');
+    const chatBubble = document.getElementById('chat-bubble');
+    const minimizeBtn = document.getElementById('minimize-btn');
+    minimizeBtn.onclick = function() {
+      chatContainer.style.display = 'none';
+      chatBubble.style.display = 'flex';
+      chatBubble.style.alignItems = 'center';
+      chatBubble.style.justifyContent = 'center';
+      chatBubble.style.transform = 'scale(1.1)';
+      setTimeout(() => { chatBubble.style.transform = 'scale(1)'; }, 150);
+    };
+    chatBubble.onclick = function() {
+      chatContainer.style.display = 'flex';
+      chatBubble.style.display = 'none';
+    };
+
+    // Detectar modo preview lo antes posible
+    const isPreview = window.location.search.includes('preview=1');
+    document.addEventListener('DOMContentLoaded', () => {
+      const chatContainer = document.getElementById('chat-container');
+      const chatBubble = document.getElementById('chat-bubble');
+      // Siempre aplicar layout flex y altura
+      chatContainer.style.display = 'flex';
+      chatContainer.style.flexDirection = 'column';
+      chatContainer.style.height = '100%';
+      // Ocultar la burbuja en modo preview
+      if (isPreview) {
+        chatBubble.style.display = 'none';
+        document.body.style.margin = '0';
+        document.body.style.padding = '0';
+        document.body.style.width = '100vw';
+        document.body.style.height = '100vh';
+        chatContainer.style.position = 'static';
+        chatContainer.style.margin = '0 auto';
+        chatContainer.style.left = '0';
+        chatContainer.style.right = '0';
+        chatContainer.style.bottom = 'unset';
+        chatContainer.style.top = 'unset';
+        chatContainer.style.boxShadow = '0 2px 16px rgba(0,0,0,0.10)';
+        chatContainer.style.width = '100%';
+        chatContainer.style.height = '100%';
+        chatContainer.style.maxWidth = '100%';
+        chatContainer.style.maxHeight = '100%';
+        chatContainer.style.borderRadius = '16px';
+        chatContainer.style.overflow = 'hidden';
+      } else {
+        chatBubble.style.display = 'flex';
+        chatBubble.style.position = 'fixed';
+        chatBubble.style.bottom = '32px';
+        chatBubble.style.right = '32px';
+        chatBubble.style.zIndex = '9999';
+        chatBubble.style.width = '64px';
+        chatBubble.style.height = '64px';
+        chatBubble.style.borderRadius = '50%';
+        chatBubble.style.boxShadow = '0 2px 8px rgba(0,0,0,0.15)';
+        chatBubble.style.background = 'var(--color-main, #0084ff)';
+        chatBubble.style.alignItems = 'center';
+        chatBubble.style.justifyContent = 'center';
+        chatBubble.style.cursor = 'pointer';
+        chatBubble.style.transition = 'box-shadow 0.2s, transform 0.2s';
+        chatContainer.style.position = 'fixed';
+        chatContainer.style.bottom = '32px';
+        chatContainer.style.right = '32px';
+        chatContainer.style.left = '';
+        chatContainer.style.top = '';
+        chatContainer.style.margin = '';
+        chatContainer.style.boxShadow = '0 2px 16px rgba(0,0,0,0.15)';
+        chatContainer.style.width = '350px';
+        chatContainer.style.height = '500px';
+        chatContainer.style.maxWidth = '';
+        chatContainer.style.maxHeight = '';
+        chatContainer.style.borderRadius = '16px';
+        chatContainer.style.overflow = 'hidden';
       }
     });
   </script>
