💾 CHECKPOINT: Sistema completo antes de integración Braintree
✅ Estado actual (sin secretos expuestos):
- Sistema BytTokens funcionando 100%
- BillingPage.tsx con UI completa (mock data)
- CulqiService preparado pero no integrado
- Endpoints de planes funcionales
- Base de datos con UserPlan, TokenUsage, BillingRecord
- Frontend React con componentes UI listos
- API keys movidas a variables de entorno

🎯 Listo para integrar Braintree para pagos reales

--- a/bytchat-panel/public/static/demo-burbuja.html
+++ b/bytchat-panel/public/static/demo-burbuja.html
@@ -25,7 +25,7 @@
       return url.searchParams.get(name) || def;
     }
     window.bytchatConfig = {
-      botId: getParam('botId', 'demo'),
+      botId: getParam('botId', '2'),
       color: getParam('color', '#14305a'),
       bg: getParam('bg', '#f5f5f5'),
       logo: getParam('logo', 'https://cdn-icons-png.flaticon.com/512/4712/4712035.png'),
